5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1863_2177.log
== TEST (2019-07-02 10:25:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
res = (mat**2)-(mat)
print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
res = (mat**2)-(mat)
print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
res = (mat**2)-(mat)
print(min(res))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
res = (mat**2)-(mat)
print(min(res))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:27:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
res = (mat**2)-(mat)
print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
for i in range(mat)
-- ERROR:
File "XXXX", line 4
    for i in range(mat)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
for i in range(mat)
-- ERROR:
File "XXXX", line 4
    for i in range(mat)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:29:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
for i in range(mat)
-- EXECUTION TIME:
0.65647
-- ERROR:
  File "/home/codebench/codes/1863/2177/main.py", line 4
    for i in range(mat)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
for i in range(mat)
-- ERROR:
File "XXXX", line 4
    for i in range(mat)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
for i in range(size(mat))
-- ERROR:
File "XXXX", line 4
    for i in range(size(mat))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
for i in range(size(mat)):
-- ERROR:
File "XXXX", line 5
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:31:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			print(min(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:36:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
			print(min(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:40:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		print(min(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:40:48) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		print(min(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:41:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i=j):
			print(min(mat))
-- ERROR:
File "XXXX", line 6
    if(i=j):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:44:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:44:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:44:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- EXECUTION TIME:
1.12335
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
2.0
---- user output:
0.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:44:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:45:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:45:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:46:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:46:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:46:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- EXECUTION TIME:
1.28087
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
2.0
---- user output:
0.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:47:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:47:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- EXECUTION TIME:
0.84718
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
2.0
---- user output:
0.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:47:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:48:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = input("digite o tamanho do vetor: ")
mat= array(eval(input("digite a matriz: "))
k = zeros((n**2)-n)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
File "XXXX", line 5
    k = zeros((n**2)-n)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:49:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho do vetor: "))
vet=(n*n)-n
mat= array(eval(input("digite a matriz: "))
k = zeros(vet)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
File "XXXX", line 6
    k = zeros(vet)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:49:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho do vetor: "))
mat= array(eval(input("digite a matriz: "))
k = zeros((n**2)-n)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
File "XXXX", line 5
    k = zeros((n**2)-n)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:50:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho do vetor: "))
mat= array(eval(input("digite a matriz: "))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
File "XXXX", line 5
    k = zeros(6)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:50:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho do vetor: "))
mat= array(eval(input("digite a matriz: "))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
File "XXXX", line 5
    k = zeros(6)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:51:17) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho do vetor: "))
mat= array(eval(input("digite a matriz: ")))
k = zeros(6)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:51:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho do vetor: "))
mat= array(eval(input("digite a matriz: ")))
k = zeros((n**2)-n)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:51:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho do vetor: "))
mat= array(eval(input("digite a matriz: ")))
k = zeros((n**2)-n)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:52:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho do vetor: "))
mat= array(eval(input("digite a matriz: ")))
k = zeros((n**2)-n)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- EXECUTION TIME:
1.21935
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1863/2177/main.py", line 3, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: '[[10,8,2],[20,16,4],[40,32,8]]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:52:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho do vetor: "))
mat= array(eval(input("digite a matriz: ")))
k = zeros((n**2)-n)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:52:48) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho do vetor: "))
mat= array(eval(input("digite a matriz: ")))
k = zeros((n**2)-n)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:53:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho do vetor: "))
mat= array(eval(input("digite a matriz: ")))
k = zeros((n**2)-n)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:53:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho do vetor: "))
mat= array(eval(input("digite a matriz: ")))
k = zeros((n**2)-n)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i!=j):
			k[i]= mat[i,j]
print(min(k))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
